Графика всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="https://via.placeholder.com/160x65" alt="логотип nёrds">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
       </a>
       <ul class="site-navigation">
         <li><a href="#">Студия</a></li>
@@ -22,7 +22,9 @@
         <li><a href="#">Контакты</a></li>
       </ul>
       <div class="user-navigation">
-        <a class="cart" href="#">Корзина</a>
+        <a class="cart" href="#">Корзина
+          <img src="https://via.placeholder.com/15x15" alt="">
+        </a>
       </div>
     </nav>
 
@@ -67,8 +69,11 @@
       <ul class="template-list">
         <li>
           <h3>SEDONA</h3>
-          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона SEDONA">
-          <img src="https://via.placeholder.com/360x580" alt="шаблон SEDONA">
+          <img src="https://via.placeholder.com/360x40" alt="">
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <img src="img/img-sedona.jpg" width="358" height="578" alt="шаблон SEDONA">
           <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона SEDONA">
           <a class="template-price-title" href="#">Sedona</a>
           <p class="template-price-text">Информационный сайт  для туристов</p>
@@ -77,8 +82,11 @@
 
         <li>
           <h3>PINK</h3>
-          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона PINK">
-          <img src="https://via.placeholder.com/360x580" alt="шаблон PINK">
+          <img src="https://via.placeholder.com/360x40" alt="">
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <img src="img/img-pink.jpg" width="358" height="578" alt="шаблон PINK">
           <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона PINK">
           <a class="template-price-title" href="#">Pink App</a>
           <p class="template-price-text">Продуктовый лендинг  приложения для iOS и Android</p>
@@ -87,8 +95,11 @@
 
         <li>
           <h3>Barbershop BORODINSKI</h3>
-          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона Barbershop BORODINSKI">
-          <img src="https://via.placeholder.com/360x580" alt="шаблон Barbershop BORODINSKI">
+          <img src="https://via.placeholder.com/360x40" alt="">
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <img src="img/img-barbershop.jpg" width="358" height="578" alt="шаблон Barbershop BORODINSKI">
           <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона Barbershop BORODINSKI">
           <a class="template-price-title" href="#">Barbershop</a>
           <p class="template-price-text">Сайт салона красоты.  Для мужчин, да.</p>
@@ -97,8 +108,11 @@
 
         <li>
           <h3>MiSHKA</h3>
-          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона MiSHKA">
-          <img src="https://via.placeholder.com/360x580" alt="шаблон MiSHKA">
+          <img src="https://via.placeholder.com/360x40" alt="">
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <img src="img/img-mishka.jpg" width="358" height="578" alt="шаблон MiSHKA">
           <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона MiSHKA">
           <a class="template-price-title" href="#">MISHKA</a>
           <p class="template-price-text">Интернет-магазин  вязаных игрушек</p>
@@ -107,8 +121,11 @@
 
         <li>
           <h3>A Plus</h3>
-          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона A Plus">
-          <img src="https://via.placeholder.com/360x580" alt="шаблон A Plus">
+          <img src="https://via.placeholder.com/360x40" alt="">
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <img src="img/img-aplus.jpg" width="358" height="578" alt="шаблон A Plus">
           <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона A Plus">
           <a class="template-price-title" href="#">A Plus</a>
           <p class="template-price-text">Лендинг курсов повышения квалификации</p>
@@ -117,8 +134,11 @@
 
         <li>
           <h3>КВАСТ</h3>
-          <img src="https://via.placeholder.com/360x40" alt="декоративная дорожка-слайдер для шаблона КВАСТ">
-          <img src="https://via.placeholder.com/360x580" alt="шаблон КВАСТ">
+          <img src="https://via.placeholder.com/360x40" alt="">
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <button class="templates-button" type="button">.</button>
+          <img src="img/img-kvast.jpg" width="358" height="578" alt="шаблон КВАСТ">
           <img src="https://via.placeholder.com/360x231" alt="попап с ценником для шаблона КВАСТ">
           <a class="template-price-title" href="#">КВАСТ</a>
           <p class="template-price-text">Промо-сайт производителя  крафтового кваса</p>
@@ -151,6 +171,7 @@
     <section class="modal modal-map">
       <h2>Карта</h2>
       <!-- Здесь будет карта -->
+      <img src="img/map_1.jpg" width="1440" height="416" alt="карта с адресом nёrds">
     </section>
 
     <section class="contacts">
@@ -167,7 +188,7 @@
 
     <section class="marker">
       <h2>маркер nёrd's на карте</h2>
-      <img src="https://via.placeholder.com/231x190" alt="маркер nёrd's на карте">
+      <img src="img/map-marker_1.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
     <section class="social">
