--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="https://via.placeholder.com/160x65" alt="логотип nёrds">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
       </a>
       <ul class="site-navigation">
         <li><a href="#">Студия</a></li>
@@ -22,7 +22,9 @@
         <li><a href="#">Контакты</a></li>
       </ul>
       <div class="user-navigation">
-        <a class="cart" href="#">Корзина</a>
+        <a class="cart" href="#">Корзина
+          <img src="https://via.placeholder.com/15x15" alt="">
+        </a>
       </div>
     </nav>
 
@@ -128,22 +130,22 @@
       <ul class="partners-list">
         <li>
           <a class="partner-link" href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="https://via.placeholder.com/199x68" alt="партнер html academy">
+            <img src="img/logo-1.png" width="199" height="68" alt="партнер html academy">
           </a>
         </li>
         <li>
           <a class="partner-link" href="#">
-            <img src="https://via.placeholder.com/209x90" alt="партнер Barbershop BORODINSKI">
+            <img src="img/logo-2.png" width="209" height="90" alt="партнер Barbershop BORODINSKI">
           </a>
         </li>
         <li>
           <a class="partner-link" href="#">
-            <img src="https://via.placeholder.com/185x52" alt="партнер PINK">
+            <img src="img/logo-3.png" width="185" height="52" alt="партнер PINK">
           </a>
         </li>
         <li>
           <a class="partner-link" href="#">
-            <img src="https://via.placeholder.com/173x84" alt="партнер MiSHKA">
+            <img src="img/logo-4.png" width="173" height="84" alt="партнер MiSHKA">
           </a>
         </li>
       </ul>
@@ -155,6 +157,7 @@
     <section class="modal modal-map">
       <h2>Карта</h2>
       <!-- Здесь будет карта -->
+      <img src="img/map_1.jpg" width="1440" height="416" alt="карта с адресом nёrds">
     </section>
 
     <section class="contacts">
@@ -171,7 +174,7 @@
 
     <section class="marker">
       <h2>маркер nёrd's на карте</h2>
-      <img src="https://via.placeholder.com/231x190" alt="маркер nёrd's на карте">
+      <img src="img/map-marker_1.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
     <section class="social">
