--- a/index.html
+++ b/index.html
@@ -11,49 +11,55 @@
 <body class="page-body">
 
   <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
-      </a>
-      <ul class="site-navigation">
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-      <div class="user-navigation">
-        <a class="cart" href="#">Корзина</a>
-      </div>
-    </nav>
+    <div class="main-header-wrapper">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="логотип nёrds">
+        </a>
+        <div class="main-navigation-wrapper">
+          <ul class="site-navigation">
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <div class="user-navigation">
+            <a class="cart" href="#">Корзина</a>
+          </div>
+        </div>
+      </nav>
 
-    <h1>Студия дизайна nёrd's</h1>
+      <h1>Студия дизайна nёrd's</h1>
 
-    <section class="photoslides">
-      <h2>Фотослайды</h2>
-      <ul  class="photoslides-list">
-        <li class="photoslides-item">
-          <p class="photoslides-slogan">Долго, дорого, скурпулезно.</p>
-          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="button photoslides-know-button" href="#">Узнать больше</a>
-          <img src="https://via.placeholder.com/760x431" alt="3 телефона">
-        </li>
-        <li class="photoslides-item">
-          <p class="photoslides-slogan">Любим математику  как никто другой</p>
-          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-          <a class="button photoslides-know-button" href="#">Узнать больше</a>
-          <img src="https://via.placeholder.com/760x431" alt="2 компьютера">
-        </li>
-        <li class="photoslides-item">
-          <p class="photoslides-slogan">Только ночь, только хардкор</p>
-          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <a class="button photoslides-know-button" href="#">Узнать больше</a>
-          <img src="https://via.placeholder.com/760x431" alt="планшет и телефон">
-        </li>
-      </ul>
-      <button class="photoslides-button photoslides-button-first" type="button" disabled>кнопка1</button>
-      <button class="photoslides-button photoslides-button-second" type="button">кнопка2</button>
-      <button class="photoslides-button photoslides-button-third" type="button">кнопка3</button>
-    </section>
+      <section class="photoslides">
+        <h2>Фотослайды</h2>
+        <div class="photoslides-wrapper">
+          <ul  class="photoslides-list">
+            <li class="photoslides-item">
+              <p class="photoslides-slogan">Долго, дорого,<br> скурпулезно.</p>
+              <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+              <a class="button photoslides-know-button" href="#">Узнать больше</a>
+              <img src="https://via.placeholder.com/760x431" alt="3 телефона">
+            </li>
+            <li class="photoslides-item">
+              <p class="photoslides-slogan">Любим математику <br> как никто другой</p>
+              <p>Никакого креатива, только математические формулы<br> для расчета идеальных пропорций</p>
+              <a class="button photoslides-know-button" href="#">Узнать больше</a>
+              <img src="https://via.placeholder.com/760x431" alt="2 компьютера">
+            </li>
+            <li class="photoslides-item">
+              <p class="photoslides-slogan">Только ночь,<br> только хардкор</p>
+              <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+              <a class="button photoslides-know-button" href="#">Узнать больше</a>
+              <img src="https://via.placeholder.com/760x431" alt="планшет и телефон">
+            </li>
+          </ul>
+          <button class="photoslides-button photoslides-round-button" type="button" disabled>кнопка1</button>
+          <button class="photoslides-button photoslides-round-button" type="button">кнопка2</button>
+          <button class="photoslides-button photoslides-round-button" type="button">кнопка3</button>
+        </div>
+      </section>
+    </div>
   </header>
 
   <main class="container">
@@ -64,64 +70,66 @@
         <li class="services-item">
           <img src="https://via.placeholder.com/300x146" alt="веб-сайты на красном фоне">
           <h3>Веб-сайты</h3>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <a class="button website-button" href="#">Заказать</a>
         </li>
         <li class="services-item">
           <img src="https://via.placeholder.com/300x146" alt="приложения на зеленом фоне">
           <h3>Приложения</h3>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <p>Покорите топ-10 приложений в<br> AppStore и Google Play</p>
           <a class="button app-button" href="#">Заказать</a>
         </li>
         <li class="services-item">
           <img src="https://via.placeholder.com/300x146" alt="презентации на желтом фоне">
           <h3>Презентации</h3>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
           <a class="button presentation-button" href="#">Заказать</a>
         </li>
       </ul>
     </section>
 
-    <section class="features">
-      <h2>Преимущества</h2>
-      <p class="features-slogan">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-      <p class="features-text">Выполняем заказы на разработку:</p>
-      <ul class="features-list">
-        <li class="features-item">
-          <p>Веб-сайтов любой сложности</p>
-        </li>
-        <li class="features-item">
-          <p>Мобильных приложений для iOS и Android</p>
-        </li>
-        <li class="features-item">
-          <p>Слайдшоу и видео для корпоративных презентаций</p>
-        </li>
-      </ul>
-    </section>
+    <div class="features-and-statistics">
+      <section class="features">
+        <h2>Преимущества</h2>
+        <p class="features-slogan">Мы - маленькая, но гордая<br> дизайн-студия из Краснодара.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический <br> превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p class="features-text">Выполняем заказы на разработку:</p>
+        <ul class="features-list">
+          <li class="features-item">
+            <p>Веб-сайтов любой сложности</p>
+          </li>
+          <li class="features-item">
+            <p>Мобильных приложений для iOS и Android</p>
+          </li>
+          <li class="features-item">
+            <p>Слайдшоу и видео для корпоративных презентаций</p>
+          </li>
+        </ul>
+      </section>
 
-    <section class="statistics">
-      <h2>Статистика</h2>
-      <img src="https://via.placeholder.com/360x208" alt="изображение nerds с разноцветной абстракцией">
-      <p class="statistics-caption">С 2004 года любим точность во всем:</p>
-      <ul class="statistics-list">
-        <li class="statistics-item">
-          <span class="statistics-numeral">146</span>
-          <span class="statistics-percent">%</span>
-          <p>Уровень самоотдачи</p>
-        </li>
-        <li class="statistics-item">
-          <span class="statistics-numeral">100</span>
-          <span class="statistics-percent">%</span>
-          <p>Соблюдение сроков</p>
-        </li>
-        <li class="statistics-item">
-          <span class="statistics-numeral">50</span>
-          <span class="statistics-percent">%</span>
-          <p>Минимальная предоплата</p>
-        </li>
-      </ul>
-    </section>
+      <section class="statistics">
+        <h2>Статистика</h2>
+        <img src="https://via.placeholder.com/360x208" alt="изображение nerds с разноцветной абстракцией">
+        <p class="statistics-caption">С 2004 года любим точность во всем:</p>
+        <ul class="statistics-list">
+          <li class="statistics-item">
+            <span class="statistics-numeral">146</span>
+            <span class="statistics-percent">%</span>
+            <p>Уровень<br> самоотдачи</p>
+          </li>
+          <li class="statistics-item">
+            <span class="statistics-numeral">100</span>
+            <span class="statistics-percent">%</span>
+            <p>Соблюдение<br> сроков</p>
+          </li>
+          <li class="statistics-item">
+            <span class="statistics-numeral">50</span>
+            <span class="statistics-percent">%</span>
+            <p>Минимальная<br> предоплата</p>
+          </li>
+        </ul>
+      </section>
+    </div>
 
     <section class="partners">
       <h2>Наши партнеры:</h2>
@@ -175,26 +183,28 @@
       <img src="img/map-marker.png" width="231" height="190" alt="маркер nёrd's на карте">
     </section>
 
-    <section class="social">
-      <h2>Мы в соцсетях</h2>
-      <ul class="social-list">
-        <li>
-          <a class="button social-button" href="#">Вконтакте</a>
-        </li>
-        <li>
-          <a class="button social-button" href="#">Фейсбук</a>
-        </li>
-        <li>
-          <a class="button social-button" href="#">Инстаграм</a>
-        </li>
-      </ul>
-    </section>
+    <div class="footer-container">
+      <section class="social">
+        <h2>Мы в соцсетях</h2>
+        <ul class="social-list">
+          <li>
+            <a class="button social-button" href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a class="button social-button" href="#">Фейсбук</a>
+          </li>
+          <li>
+            <a class="button social-button" href="#">Инстаграм</a>
+          </li>
+        </ul>
+      </section>
 
-    <section class="sale">
-      <h2>Скидка</h2>
-      <p class="sale-tagline">Давайте дружить, это выгодно!</p>
-      <p class="sale-desc">Скидка 10% для друзей из социальных сетей.</p>
-    </section>
+      <section class="sale">
+        <h2>Скидка</h2>
+        <p class="sale-tagline">Давайте дружить, это выгодно!</p>
+        <p class="sale-desc">Скидка 10% для друзей из социальных сетей.</p>
+      </section>
+    </div>
   </footer>
 </body>
 </html>
